Cleaned up the style of the context menu and prevented overflow of Markdown div.

--- a/calendar.css
+++ b/calendar.css
@@ -15,7 +15,7 @@
     --notesTextColor: #000;
     --bodyColor: #e0e0e0;
     --invertSettingsIcon: false;
-    
+    --notesMenuBGColor: #464646;    
 }
 body {
 	background: var(--bodyColor);
@@ -595,14 +595,42 @@ textarea {
     border-style: solid;
     border-color: var(--notesTextColor);
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 /* #endregion SEARCH RESULT PREVIEW */
 
 /* #region CONTEXT MENU */
 .notesMenu {
-    background-color: var(--notesBGColor);
+    background-color: var(--notesMenuBGColor);
     display: none;
     position: fixed;
+    width: 200px;
     padding: 5px 5px 5px 5px;
+    margin: 5px 5px 5px 2px;
+}
+
+.btnMenu {
+    background-color: var(--buttonface);
+    color: var(--buttontext);
+    font: 13px/0.9 "Helvetica Neue", Helvetica, Arial, san-serif;
+    padding: 5px;
+    text-align: left;
+    font-weight: bold;
+    border-top-left-radius:5px;
+	border-top-right-radius:5px;
+    border-bottom-left-radius:5px;
+    border-bottom-right-radius:5px;
+    margin-bottom: 1px;
+}
+
+.btnMenu:hover {
+    /*
+    background: -moz-linear-gradient(top, #d94215, #bb330f);
+    background: -webkit-gradient(linear, left top, left bottom, from(#dfe373), to(#a7bb0f));
+    border-color: #000;
+    */
+    background-color: var(--buttonhover);
+    cursor: pointer;
+    color: var(--buttonhovertext);
 }
 /* #endregion CONTEXT MENU */
